feat: attempt to add restricted api for admin only